--- a/packages/twenty-docker/.env.example
+++ b/packages/twenty-docker/.env.example
@@ -7,6 +7,9 @@ PG_DATABASE_HOST=db:5432
 REDIS_URL=redis://redis:6379
 
 SERVER_URL=http://localhost:3000
+FRONT_DOMAIN=localhost
+FRONT_PORT=3000
+FRONT_PROTOCOL=http
 
 # Use openssl rand -base64 32 for each secret
 # APP_SECRET=replace_me_with_a_random_string
