--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -2,12 +2,14 @@
 PG_DATABASE_URL=postgres://postgres:postgres@localhost:5432/default
 REDIS_URL=redis://localhost:6379
 
-FRONT_BASE_URL=http://localhost:3001
-
 APP_SECRET=replace_me_with_a_random_string
 SIGN_IN_PREFILLED=true
 
 ACCESS_TOKEN_SECRET=replace_me_with_a_random_string_access
+
+FRONT_PROTOCOL=http
+FRONT_DOMAIN=localhost
+FRONT_PORT=3001
 
 # ———————— Optional ————————
 # PORT=3000
