feat: record group insert at bottom when created (#9053)
Fix #9050 

When we add a new record in a record group this one should be added at
them bottom.

--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -40,6 +40,7 @@
     "@tiptap/extension-text-style": "^2.8.0",
     "@tiptap/react": "^2.8.0",
     "@xyflow/react": "^12.0.4",
+    "buffer": "^6.0.3",
     "transliteration": "^2.3.5"
   }
 }
