--- a/packages/twenty-docker/k8s/manifests/deployment-server.yaml
+++ b/packages/twenty-docker/k8s/manifests/deployment-server.yaml
@@ -41,10 +41,8 @@ spec:
               value: "postgres://postgres:postgres@twentycrm-db.twentycrm.svc.cluster.local/default"
             - name: "REDIS_URL"
               value: "redis://twentycrm-redis.twentycrm.svc.cluster.local:6379"
-            - name: ENABLE_DB_MIGRATIONS
-              value: "true"
             - name: SIGN_IN_PREFILLED
-              value: "true"
+              value: "false"
             - name: STORAGE_TYPE
               value: "local"
             - name: "MESSAGE_QUEUE_TYPE"
