Github CI workflow fix (#9137)

--- a/.github/workflows/ci-demo-check.yml
+++ b/.github/workflows/ci-demo-check.yml
@@ -1,7 +1,8 @@
-name: CI demo check
+name: CI Demo check
 on:
   schedule:
     - cron: '30 7,19 * * *'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -11,6 +12,9 @@ jobs:
   test:
     timeout-minutes: 15
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./packages/twenty-e2e-testing
     steps:
       - uses: actions/checkout@v4
         with:
@@ -27,7 +31,7 @@ jobs:
 
       - name: Run Playwright tests
         id: test
-        run: yarn playwright test --grep @demo-only
+        run: yarn playwright test --grep "@demo-only"
 
       - name: Upload report after tests
         uses: actions/upload-artifact@v4
