--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "lodash.chunk": "^4.2.0",
     "lodash.compact": "^3.0.1",
     "lodash.debounce": "^4.0.8",
+    "lodash.escaperegexp": "^4.1.2",
     "lodash.groupby": "^4.6.0",
     "lodash.identity": "^3.0.0",
     "lodash.isempty": "^4.4.0",
@@ -254,6 +255,7 @@
     "@types/lodash.camelcase": "^4.3.7",
     "@types/lodash.compact": "^3.0.9",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/lodash.escaperegexp": "^4.1.9",
     "@types/lodash.groupby": "^4.6.9",
     "@types/lodash.identity": "^3.0.9",
     "@types/lodash.isempty": "^4.4.7",
